metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Net_New_Lead__c.field-meta.xml
<CustomField>
    <fullName>FCR_Net_New_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Checked if associated lead or contact was created within 5 minutes of this response.</description>
    <label>Net New Name</label>
    <type>Checkbox</type>
</CustomField>