metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Non_Response_Audit__c.field-meta.xml
<CustomField>
    <fullName>FCR_Non_Response_Audit__c</fullName>
    <description>wd field
Audit field for existing responses. Indicates the most recent time when a response was updated to a member status not configured as a response.</description>
    <inlineHelpText>Audit field for existing responses. Indicates the most recent time when a response was updated to a member status not configured as a response.</inlineHelpText>
    <label>Non Response Audit</label>
    <type>DateTime</type>
</CustomField>