metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>wd field
If an opportunity was created as a result of this MQR follow up the Opportunity Name field will be populated.</description>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>