metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Amount__c</fullName>
    <description>wd field</description>
    <formula>if( FCR_Dated_Opportunity_Amount__c !=0, FCR_Dated_Opportunity_Amount__c, FCR_Opportunity__r.Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>