metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Cleared__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Cleared__c</fullName>
    <description>wd field
If an opportunity was associated to a Campaign and then deleted - the date of deletion is set here.</description>
    <inlineHelpText>If an opportunity was associated to a Campaign and then deleted - the date of deletion is set here.</inlineHelpText>
    <label>Opportunity Cleared</label>
    <type>Date</type>
</CustomField>