metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Closed__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Closed__c</fullName>
    <description>wd field</description>
    <formula>IF(
AND(
NOT(ISBLANK( FCR_Opportunity__c )),
FCR_Opportunity__r.IsClosed = True), &quot;True&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Closed</label>
    <type>Text</type>
</CustomField>