metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Closed_Date__c</fullName>
    <description>wd field</description>
    <formula>FCR_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Closed Date</label>
    <type>Date</type>
</CustomField>