metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Closed_Won__c</fullName>
    <description>wd field
Evaluates to &quot;True&quot; if Opportunity is Won - else is blank. Requires that the opportunity name is populated.</description>
    <formula>IF(
AND(
NOT(ISBLANK( FCR_Opportunity__c )),
FCR_Opportunity__r.IsWon = True), &quot;True&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluates to &quot;True&quot; if Opportunity is Won - else is blank. Requires that the opportunity name is populated.</inlineHelpText>
    <label>Opportunity Closed Won</label>
    <type>Text</type>
</CustomField>