metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Count__c</fullName>
    <description>wd field
Evaluates to 1 if there is a related opportunity - used for funnel reports.</description>
    <formula>IF ( NOT(ISBLANK( FCR_Opportunity__c )),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluates to 1 if there is a related opportunity - used for funnel reports.</inlineHelpText>
    <label>Opportunity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>