metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Create_Date__c</fullName>
    <description>wd field</description>
    <formula>DATEVALUE(FCR_Opportunity__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Create Date</label>
    <type>Date</type>
</CustomField>