metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Created_by__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Created_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>wd field
User that created the opportunity</description>
    <label>Opportunity Created by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>