metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Opportunity_Value_Lost__c.field-meta.xml
<CustomField>
    <fullName>FCR_Opportunity_Value_Lost__c</fullName>
    <description>wd field
Amount of related Won opportunity. Based on standard opportunity Amount field.</description>
    <formula>IF( NOT(ISBLANK(FCR_Opportunity_Closed_Won__c)) , FCR_Opportunity_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount of related Won opportunity. Based on standard opportunity Amount field.</inlineHelpText>
    <label>Opportunity Value Lost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>