metadata/force-app/main/default/objects/CampaignMember/fields/FCR_QR__c.field-meta.xml
<CustomField>
    <fullName>FCR_QR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
System checks this field if the record has met the score qualification threshold.</description>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>