metadata/force-app/main/default/objects/CampaignMember/fields/FCR_QR_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_QR_Date__c</fullName>
    <description>wd field 
Date MQL Achieved</description>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>