metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Reactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_Reactivation_Date__c</fullName>
    <description>wd field
This is the date/time the response was reactivated. It is not set when inserting a default campaign. Once set, this response cannot be reactivated by other reactivation scenarios.</description>
    <inlineHelpText>This is the date/time the response was reactivated. It is not set when inserting a default campaign. Once set, this response cannot be reactivated by other reactivation scenarios.</inlineHelpText>
    <label>Reactivation Date</label>
    <type>DateTime</type>
</CustomField>