metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Repeat_Count__c.field-meta.xml
<CustomField>
    <fullName>FCR_Repeat_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>wd field
# of this repeat 1 = first repeat response.</description>
    <label>Repeat Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>