metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_Response_Date__c</fullName>
    <description>wd field
response date</description>
    <label>Response Date</label>
    <type>DateTime</type>
</CustomField>