metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Response_Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>FCR_Response_Engagement_Level__c</fullName>
    <description>wd field
Displays engagement level for responses.</description>
    <formula>IF ( ISPICKVAL( FCR_Response_Status__c , &quot;Resolved - No Action Required&quot;), &quot;1. No Action Required&quot;,
IF ( ISPICKVAL( FCR_Response_Status__c , &quot;Legacy&quot;), &quot;1. No Action Required&quot;, 
IF ( ISPICKVAL( FCR_Response_Status__c , &quot;Resolved - Already Engaged&quot;), &quot;3. Already Engaged&quot;, 
IF ( ISPICKVAL (FCR_Response_Status__c , &quot;Not A Response&quot;), &quot;Not A Response&quot;, 
IF (ISBLANK( FCR_Response_Date__c ), &quot;Not A Response&quot;, 
&quot;2. Engagement&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays engagement level for responses.</inlineHelpText>
    <label>Response Engagement Level</label>
    <type>Text</type>
</CustomField>