metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Response_Score__c.field-meta.xml
<CustomField>
    <fullName>FCR_Response_Score__c</fullName>
    <description>wd field
Score assigned to this response</description>
    <label>Response Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>