metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>FCR_Response_Status__c</fullName>
    <description>wd field
Current response status</description>
    <label>Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified</fullName>
            </value>
            <value>
                <fullName>Sales Qualified</fullName>
            </value>
            <value>
                <fullName>Sales Accepted</fullName>
            </value>
            <value>
                <fullName>Convert to Contact</fullName>
            </value>
            <value>
                <fullName>Convert to Prospect</fullName>
            </value>
            <value>
                <fullName>Referred to Partner</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Qualified - New Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Resolved - Already Engaged</fullName>
            </value>
            <value>
                <fullName>Resolved - No Action Required</fullName>
            </value>
            <value>
                <fullName>Resolved - Opportunity Won</fullName>
            </value>
            <value>
                <fullName>Resolved - Opportunity Lost</fullName>
            </value>
            <value>
                <fullName>Not a Response</fullName>
            </value>
            <value>
                <fullName>Unmapped</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>