metadata/force-app/main/default/objects/CampaignMember/fields/FCR_SAR__c.field-meta.xml
<CustomField>
    <fullName>FCR_SAR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Set if this is a sales accepted response (sync from lead/contact status)</description>
    <label>SAL</label>
    <type>Checkbox</type>
</CustomField>