metadata/force-app/main/default/objects/CampaignMember/fields/FCR_SAR_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_SAR_Date__c</fullName>
    <description>wd field
Sales accepted response date</description>
    <label>SAL Date</label>
    <type>Date</type>
</CustomField>