metadata/force-app/main/default/objects/CampaignMember/fields/FCR_SAR_Owner__c.field-meta.xml
<CustomField>
    <fullName>FCR_SAR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>wd field
Owner at the time when the record status mapping to SAL is set on the lead, contact or opportunity.</description>
    <label>SAL Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SAR_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>