metadata/force-app/main/default/objects/CampaignMember/fields/FCR_SAR_to_SQR__c.field-meta.xml
<CustomField>
    <fullName>FCR_SAR_to_SQR__c</fullName>
    <description>wd field 
# Days from SAL to SQL - Evaluates to blank if SQL Date is blank.</description>
    <formula>FCR_SQR_Date__c - FCR_SAR_Date__c</formula>
    <inlineHelpText># Days from SAR to SQR</inlineHelpText>
    <label>SAL to SQL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>