metadata/force-app/main/default/objects/CampaignMember/fields/FCR_SQR__c.field-meta.xml
<CustomField>
    <fullName>FCR_SQR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Response was Qualified (converted)</description>
    <label>SQL</label>
    <type>Checkbox</type>
</CustomField>