metadata/force-app/main/default/objects/CampaignMember/fields/FCR_SQR_Date__c.field-meta.xml
<CustomField>
    <fullName>FCR_SQR_Date__c</fullName>
    <description>wd fields
Date SQL Set (Converted to Opportunity)</description>
    <label>SQL Date</label>
    <type>Date</type>
</CustomField>