metadata/force-app/main/default/objects/CampaignMember/fields/FCR_SQR_to_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>FCR_SQR_to_Closed_Won__c</fullName>
    <description>wd field
# Days from SQL to Closed/Won - Evaluates to blank if Closed/Won Date is blank.</description>
    <formula>IF( FCR_Opportunity_Closed_Won__c = &quot;True&quot;, FCR_Opportunity_Closed_Date__c - FCR_SQR_Date__c , null)</formula>
    <inlineHelpText># Days from SQR to Closed/Won</inlineHelpText>
    <label>SQL to Closed/Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>