metadata/force-app/main/default/objects/CampaignMember/fields/FCR_SQR_Won__c.field-meta.xml
<CustomField>
    <fullName>FCR_SQR_Won__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field</description>
    <label>Won</label>
    <type>Checkbox</type>
</CustomField>