metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Status_Age__c.field-meta.xml
<CustomField>
    <fullName>FCR_Status_Age__c</fullName>
    <description>wd field</description>
    <formula>IF( 
NOT(ISBLANK(FCR_Status_Last_Set__c)), 
ROUND(NOW()-FCR_Status_Last_Set__c, 0), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>