metadata/force-app/main/default/objects/CampaignMember/fields/FCR_Status_Last_Set__c.field-meta.xml
<CustomField>
    <fullName>FCR_Status_Last_Set__c</fullName>
    <description>wd field
Date/time when status was last updated</description>
    <label>Status Last Set</label>
    <type>DateTime</type>
</CustomField>