metadata/force-app/main/default/objects/CampaignMember/fields/FCR_TotalOpRevenueModel3__c.field-meta.xml
<CustomField>
    <fullName>FCR_TotalOpRevenueModel3__c</fullName>
    <description>wd field
Deprecated Field - Use the Campaign Influence Detail object to report on Campaign Influence metrics</description>
    <formula>FCR_ClosedOpRevenueModel3__c + FCR_OpenOpRevenueModel3__c + FCR_LostOpRevenueModel3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deprecated Field - Use the Campaign Influence Detail object to report on Campaign Influence metrics</inlineHelpText>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>