metadata/force-app/main/default/objects/CampaignMember/fields/FCR_TQR__c.field-meta.xml
<CustomField>
    <fullName>FCR_TQR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Indicates that this Response passed threshold and proceeded to be evaluated. On Lead/Contact passing organizations, FCR_QR will also be set.</description>
    <label>Threshold QR</label>
    <type>Checkbox</type>
</CustomField>