metadata/force-app/main/default/objects/CampaignMember/fields/FCR_View_Response__c.field-meta.xml
<CustomField>
    <fullName>FCR_View_Response__c</fullName>
    <description>wd field
Used for related list views on Lead and Contact page layouts</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,&quot;View Response&quot;)</formula>
    <label>View Response</label>
    <type>Text</type>
</CustomField>