metadata/force-app/main/default/objects/CampaignMember/fields/FCRM_FCR_SAL__c.field-meta.xml
<CustomField>
    <fullName>FCRM_FCR_SAL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wd field
Used by FCI</description>
    <inlineHelpText>Status Flips to Sales Accepted</inlineHelpText>
    <label>SAL</label>
    <type>Checkbox</type>
</CustomField>