metadata/force-app/main/default/objects/CampaignMember/fields/First_Queue_Assigned__c.field-meta.xml
<CustomField>
    <fullName>First_Queue_Assigned__c</fullName>
    <description>If first owner assigned is a lead queue - queue name will be set here.</description>
    <inlineHelpText>If first owner assigned is a lead queue - queue name will be set here.</inlineHelpText>
    <label>First Queue Assigned</label>
    <length>50</length>
    <type>Text</type>
</CustomField>