metadata/force-app/main/default/objects/CampaignMember/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <description>BODEV-2393 include fileds un campaign with campaign members reporting</description>
    <formula>IF( NOT(ISBLANK(ContactId)),Contact.Industry_Group__c,
text(Lead.Industry_Group__c))</formula>
    <label>Industry Group</label>
    <type>Text</type>
</CustomField>