metadata/force-app/main/default/objects/CampaignMember/fields/Industry_ICP__c.field-meta.xml
<CustomField>
    <fullName>Industry_ICP__c</fullName>
    <description>BODEV-2393 include fileds un campaign with campaign members reporting</description>
    <formula>IF( NOT(ISBLANK(ContactId)), Contact.Account.Industry_ICP__c,
Lead.Industry_ICP__c)</formula>
    <label>Industry ICP</label>
    <type>Checkbox</type>
</CustomField>