metadata/force-app/main/default/objects/CampaignMember/fields/Job_area_NEW__c.field-meta.xml
<CustomField>
    <fullName>Job_area_NEW__c</fullName>
    <description>BODEV-2393 include fileds un campaign with campaign members reporting</description>
    <formula>IF( NOT(ISBLANK(ContactId)), text(Contact.Job_Area_New__c),
text(Lead.Job_Area_New__c))</formula>
    <label>Job area NEW</label>
    <type>Text</type>
</CustomField>