metadata/force-app/main/default/objects/CampaignMember/fields/Lead_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Description__c</fullName>
    <description>wd field</description>
    <inlineHelpText>Mapped from Lead/Contact Record</inlineHelpText>
    <label>Lead Source Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>