metadata/force-app/main/default/objects/CampaignMember/fields/Lead_status__c.field-meta.xml
<CustomField>
    <fullName>Lead_status__c</fullName>
    <formula>text(Lead.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead status</label>
    <type>Text</type>
</CustomField>