metadata/force-app/main/default/objects/CampaignMember/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Campaign Member Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>