metadata/force-app/main/default/objects/CampaignMember/fields/Neg__c.field-meta.xml
<CustomField>
    <fullName>Neg__c</fullName>
    <description>wd field</description>
    <formula>IF(NOT(ISBLANK(Neg_Date__c)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Neg</label>
    <type>Checkbox</type>
</CustomField>