metadata/force-app/main/default/objects/CampaignMember/fields/Neg_Date__c.field-meta.xml
<CustomField>
    <fullName>Neg_Date__c</fullName>
    <description>wd field</description>
    <formula>/* Deleted this formula and set the value as blank as opportunity is deleted FCR_Opportunity__r.Neg_Date__c */

DATEVALUE(&quot;&quot;)</formula>
    <label>Neg Date</label>
    <type>Date</type>
</CustomField>