metadata/force-app/main/default/objects/CampaignMember/fields/Neg_to_Won__c.field-meta.xml
<CustomField>
    <fullName>Neg_to_Won__c</fullName>
    <description>wd field
Used by FCI</description>
    <formula>IF( FCR_Opportunity_Closed_Won__c = &quot;True&quot;, FCR_Opportunity_Closed_Date__c - Neg_Date__c , null )</formula>
    <inlineHelpText># Days from Neg to Won - Evaluates to blank if Negotiation Date is blank.</inlineHelpText>
    <label>Neg to Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>