metadata/force-app/main/default/objects/CampaignMember/fields/Nurture_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Timeout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the lead/contact was set to nurture time out and therefore this response was not processed by the system.</description>
    <inlineHelpText>Set to true when the lead/contact was set to nurture time out and therefore this response was not processed by the system.</inlineHelpText>
    <label>Nurture Timeout</label>
    <type>Checkbox</type>
</CustomField>