metadata/force-app/main/default/objects/CampaignMember/fields/of_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Employees__c</fullName>
    <description>wd field</description>
    <label># of Employees</label>
    <length>15</length>
    <type>Text</type>
</CustomField>