metadata/force-app/main/default/objects/CampaignMember/fields/On24_Answered_All_Polls__c.field-meta.xml
<CustomField>
    <fullName>On24_Answered_All_Polls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False is a user answer all the polls</description>
    <label>On24 Answered All Polls</label>
    <type>Checkbox</type>
</CustomField>