metadata/force-app/main/default/objects/CampaignMember/fields/On24_Answered_All_Surveys__c.field-meta.xml
<CustomField>
    <fullName>On24_Answered_All_Surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False is a user answer all the surveys (not survey questions)</description>
    <label>On24 Answered All Surveys</label>
    <type>Checkbox</type>
</CustomField>