metadata/force-app/main/default/objects/CampaignMember/fields/On24_Answered_Any_Poll__c.field-meta.xml
<CustomField>
    <fullName>On24_Answered_Any_Poll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On24 Answered Any Poll</label>
    <type>Checkbox</type>
</CustomField>