metadata/force-app/main/default/objects/CampaignMember/fields/On24_Answered_Any_Survey__c.field-meta.xml
<CustomField>
    <fullName>On24_Answered_Any_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On24 Answered Any Survey</label>
    <type>Checkbox</type>
</CustomField>