metadata/force-app/main/default/objects/CampaignMember/fields/On24_Answered_Polls__c.field-meta.xml
<CustomField>
    <fullName>On24_Answered_Polls__c</fullName>
    <description>Number of polls the user responded to</description>
    <label>On24 Answered Polls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>