metadata/force-app/main/default/objects/CampaignMember/fields/On24_Answered_Surveys__c.field-meta.xml
<CustomField>
    <fullName>On24_Answered_Surveys__c</fullName>
    <description>Number of surveys the user responded to (not survey questions)</description>
    <label>On24 Answered Surveys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>