metadata/force-app/main/default/objects/CampaignMember/fields/On24_Asked_Any_Questions__c.field-meta.xml
<CustomField>
    <fullName>On24_Asked_Any_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False is a user asked any questions</description>
    <label>On24 Asked Any Questions</label>
    <type>Checkbox</type>
</CustomField>