metadata/force-app/main/default/objects/CampaignMember/fields/On24_Attended_Archive__c.field-meta.xml
<CustomField>
    <fullName>On24_Attended_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False if a user attended the archived/on-demand portion of this event</description>
    <label>On24 Attended Archive</label>
    <type>Checkbox</type>
</CustomField>