metadata/force-app/main/default/objects/CampaignMember/fields/On24_Attended_Live__c.field-meta.xml
<CustomField>
    <fullName>On24_Attended_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True/False if a user attended the live portion of this event</description>
    <label>On24 Attended Live</label>
    <type>Checkbox</type>
</CustomField>